Reorder and add new options.
git-svn-id: http://qmcpack.googlecode.com/svn@1534 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -16,66 +16,59 @@ SET (LIBRARY_OUTPUT_PATH ${qmcpack_BINARY_DIR}/lib CACHE PATH "Single output dir
 SET (EXECUTABLE_OUTPUT_PATH ${qmcpack_BINARY_DIR}/bin CACHE PATH "Single output directory for building all executables.")
 
 ######################################################################
-# choose parallel mode 
-# set each variable to 1 to enable  or set environment variables
-#
-# QMC_MPI : enable MPI 
-# QMC_OMP : enable OMP 
-# QMC_ASYNC_COLLECT : enable async collect for the estimator manager
-#   This is useful for slow networks including gigabit ethernet and
-#   Myrinet. Infiband and better is ok but depends on the MPI
-#   implementation. 
-######################################################################
-#OPTION(QMC_MPI "Enable MPI library" ON)
-#OPTION(QMC_OMP "Enable OpenMP parallelization" OFF)
-SET(QMC_MPI 1)
-SET(QMC_OMP 0)
-OPTION(MPIP_PROFILE "Enable MPI profiling MPI with mpiP library" OFF)
-
-IF($ENV{QMC_MPI})
-  SET(QMC_MPI $ENV{QMC_MPI}) 
-ENDIF($ENV{QMC_MPI})
-IF($ENV{QMC_OMP})
-  SET(QMC_OMP $ENV{QMC_OMP}) 
-ENDIF($ENV{QMC_OMP})
-
-######################################################################
-#set 32/64 bit OS 
-######################################################################
-SET(BITS 32)
-IF($ENV{QMC_BITS})
-  SET(BITS $ENV{QMC_BITS})
-ENDIF($ENV{QMC_BITS})
-
-######################################################################
-#important settings for QMC simulations to instantiate template classes
-######################################################################
-#OHMMS_* is to reuse Ohmms class libraries
-#OHMMS_DIM =  dimension of the problem
-#OHMMS_INDEXTYPE = type of index
-#OHMMS_PRECISION  = base precision, float, double etc
-#OHMMS_ORTHO  = 0 for general unit cell, 1 for orthogonal cells
-#QMC_FASTWALKER  = true, when operation is faster for each walker
-#QMC_COMPLEX = true if using complex wavefunctions
+# Set the compiler-time parameters
+# OHMMS_DIM =  dimension of the problem
+# OHMMS_INDEXTYPE = type of index
+# OHMMS_PRECISION  = base precision, float, double etc
+# QMC_COMPLEX = true if using complex wavefunctions
+# QMC_MPI =  enable MPI 
+# QMC_OMP = enable OMP 
+# QMC_BITS = 32/64 bit
 ######################################################################
 SET(OHMMS_DIM 3)
 SET(OHMMS_INDEXTYPE int)
 SET(OHMMS_PRECISION double)
 SET(QMC_COMPLEX 0)
-IF($ENV{QMC_COMPLEX})
+SET(QMC_MPI 1)
+SET(QMC_OMP 0)
+SET(QMC_BITS 32)
+
+######################################################################
+# Build options
+# QMC_BUILD_STATIC build static/dynamic  libraries
+# BUILD_QMCTOOLS   build utility programs
+# BUILD_SANDBOX    build test programs
+# MPIP_PROFILE     profile mpi performance
+######################################################################
+SET(QMC_BUILD_STATIC 0)
+SET(BUILD_QMCTOOLS 0)
+SET(BUILD_SANDBOX 0)
+SET(MPIP_PROFILE 0)
+
+######################################################################
+# Overwrite with environments if they differ from the set values
+######################################################################
+IF(NOT $ENV{QMC_MPI} MATCHES QMC_MPI)
+  SET(QMC_MPI $ENV{QMC_MPI}) 
+ENDIF(NOT $ENV{QMC_MPI} MATCHES QMC_MPI)
+IF(NOT $ENV{QMC_OMP} MATCHES QMC_OMP)
+  SET(QMC_OMP $ENV{QMC_OMP}) 
+ENDIF(NOT $ENV{QMC_OMP} MATCHES QMC_OMP)
+IF(NOT $ENV{QMC_BITS} MATCHES QMC_BITS)
+  SET(QMC_BITS $ENV{QMC_BITS})
+ENDIF(NOT $ENV{QMC_BITS} MATCHES QMC_BITS)
+IF(NOT $ENV{QMC_COMPLEX} MATCHES QMC_COMPLEX)
   SET(QMC_COMPLEX $ENV{QMC_COMPLEX})
-ENDIF($ENV{QMC_COMPLEX})
+ENDIF(NOT $ENV{QMC_COMPLEX} MATCHES QMC_COMPLEX)
 
 ######################################################################
 # FIXED PARAMETERS for test and legacy reasons
+# DO NOT TOUCH THESE
+# QMC_ORTHO  = 0 for general unit cell, 1 for orthogonal cells
+# QMC_FASTWALKER  = true, when operation is faster for each walker
 ######################################################################
 SET(QMC_FASTWALKER 1)
 SET(OHMMS_ORTHO 0)
-
-######################################################################
-#QMCAPPS  =  an application to compile
-#SET(QMCAPPS  MolecuApps)
-######################################################################
 
 ######################################################################
 #list of options to determine libraries. First, try to use libraries available
@@ -92,11 +85,6 @@ SET(HAVE_LIBSPRNG 0)
 SET(HAVE_LIBBLITZ 0)
 SET(HAVE_LIBGSL 0)
 SET(INTEL_COMPILER 0)
-
-######################
-#1 to build static library
-######################
-SET(QMC_BUILD_STATIC 0)
 
 ######################################################
 # Directory where customize cmake files reside
@@ -120,6 +108,7 @@ IF($ENV{CXX} MATCHES "xlC")
   INCLUDE(${PROJECT_CMAKE}/IBMCompilers.cmake)
   SET(FOUND_CXXENV 1)
 ENDIF($ENV{CXX} MATCHES "xlC")
+
 IF(NOT FOUND_CXXENV)
   INCLUDE(${PROJECT_CMAKE}/GNUCompilers.cmake)
 ENDIF(NOT FOUND_CXXENV)
