Add new cpp files.
git-svn-id: http://qmcpack.googlecode.com/svn@1544 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -29,8 +29,10 @@ SET(FERMION_SRCS
   Fermion/DiracDeterminantBase.cpp
   Fermion/SlaterDet.cpp
   Fermion/SlaterDetBuilder.cpp
-  PlaneWave/PWOrbitalBuilder.cpp
+  PlaneWave/PWBasis.cpp
   PlaneWave/PWOrbitalSet.cpp
+  PlaneWave/PWParameterSet.cpp
+  PlaneWave/PWOrbitalBuilder.cpp
   MolecularOrbitals/STOBuilder.cpp
   MolecularOrbitals/GTOBuilder.cpp
   MolecularOrbitals/NGOBuilder.cpp
