Fix the missing VMC directory.
git-svn-id: http://qmcpack.googlecode.com/svn@1597 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/omp200701/src/QMCDrivers/CMakeLists.txt
+++ b/branches/omp200701/src/QMCDrivers/CMakeLists.txt
@@ -47,15 +47,15 @@ SET(QMCDRIVERS
 IF(NOT QMCPLUSPLUS_RELEASE)
 
   SET(QMCDRIVERS ${QMCDRIVERS}
-    VMCMultiple.cpp
-    VMCPbyPMultiple.cpp
     PolymerEstimator.cpp
     RQMCMultiple.cpp
     MultiChain.cpp
     SpaceWarp.cpp
-    VMCMultipleWarp.cpp
-    VMCPbyPMultiWarp.cpp
     RQMCMultiWarp.cpp
+    VMC/VMCMultiple.cpp
+    VMC/VMCPbyPMultiple.cpp
+    VMC/VMCMultipleWarp.cpp
+    VMC/VMCPbyPMultiWarp.cpp
   )
 
 #include GSLOptimize.cpp if libgsl is enabled
