Add tri for 3D spline tests.
git-svn-id: http://qmcpack.googlecode.com/svn@1624 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/omp200701/src/SandBox/CMakeLists.txt
+++ b/branches/omp200701/src/SandBox/CMakeLists.txt
@@ -21,16 +21,16 @@ TARGET_LINK_LIBRARIES(mpi_group qmc qmcbase qmcutil)
 #ADD_EXECUTABLE(serialization serialization.cpp)
 #TARGET_LINK_LIBRARIES(serialization boost)
 
-ADD_EXECUTABLE(cubicspline cubicspline.cpp)
-TARGET_LINK_LIBRARIES(cubicspline qmc qmcbase)
+ADD_EXECUTABLE(tricubicspline tricubicspline.cpp)
+TARGET_LINK_LIBRARIES(tricubicspline qmc qmcbase)
 
-ADD_EXECUTABLE(bspline bspline.cpp)
-TARGET_LINK_LIBRARIES(bspline qmc qmcbase)
+ADD_EXECUTABLE(tricubicbspline tricubicbspline.cpp)
+TARGET_LINK_LIBRARIES(tricubicbspline qmc qmcbase)
 
-INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
-INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIR})
-ADD_EXECUTABLE(bspline_blitz bspline_blitz.cpp)
-TARGET_LINK_LIBRARIES(bspline_blitz qmc qmcbase)
+#INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
+#INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIR})
+#ADD_EXECUTABLE(bspline_blitz bspline_blitz.cpp)
+#TARGET_LINK_LIBRARIES(bspline_blitz qmc qmcbase)
 
 #ADD_EXECUTABLE(reduce_test reduce_performance_test.cpp)
 #TARGET_LINK_LIBRARIES(reduce_test boost)
