test code to time cubic spline.
git-svn-id: http://qmcpack.googlecode.com/svn@1625 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/omp200701/src/SandBox/CMakeLists.txt
+++ b/branches/omp200701/src/SandBox/CMakeLists.txt
@@ -21,6 +21,9 @@ TARGET_LINK_LIBRARIES(mpi_group qmc qmcbase qmcutil)
 #ADD_EXECUTABLE(serialization serialization.cpp)
 #TARGET_LINK_LIBRARIES(serialization boost)
 
+ADD_EXECUTABLE(cubicspline cubicspline.cpp)
+TARGET_LINK_LIBRARIES(cubicspline qmc qmcbase qmcutil)
+
 ADD_EXECUTABLE(tricubicspline tricubicspline.cpp)
 TARGET_LINK_LIBRARIES(tricubicspline qmc qmcbase)
 
