Fix for Darwin.
git-svn-id: http://qmcpack.googlecode.com/svn@1629 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/omp200701/src/SandBox/CMakeLists.txt
+++ b/branches/omp200701/src/SandBox/CMakeLists.txt
@@ -1,9 +1,11 @@
 PROJECT(sandbox)
 
+IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 LINK_LIBRARIES(${FORTRAN_LIBS} 
 ${LAPACK_LIBRARY} 
 ${BLAS_LIBRARY} 
 )
+ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 IF(INTEL_MKL)
   LINK_LIBRARIES(${INTEL_GUIDE_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
