--- a/trunk/src/SandBox/CMakeLists.txt
+++ b/trunk/src/SandBox/CMakeLists.txt
@@ -1,15 +1,14 @@
 PROJECT(sandbox)
 
-LINK_LIBRARIES(${FORTRAN_LIBS} 
-${LAPACK_LIBRARY} 
-${BLAS_LIBRARY} 
-)
-
 IF(INTEL_MKL)
   LINK_LIBRARIES(${INTEL_GUIDE_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 ELSE(INTEL_MKL)
   LINK_LIBRARIES(${CMAKE_THREAD_LIBS_INIT})
 ENDIF(INTEL_MKL)
+
+IF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+  LINK_LIBRARIES(${LAPACK_LIBRARY} ${BLAS_LIBRARY} ${FORTRAN_LIBS})
+ENDIF(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
 ADD_EXECUTABLE(mpi_group group.cpp)
 TARGET_LINK_LIBRARIES(mpi_group qmc qmcbase qmcutil)
@@ -22,15 +21,18 @@ TARGET_LINK_LIBRARIES(mpi_group qmc qmcbase qmcutil)
 #TARGET_LINK_LIBRARIES(serialization boost)
 
 ADD_EXECUTABLE(cubicspline cubicspline.cpp)
-TARGET_LINK_LIBRARIES(cubicspline qmc qmcbase)
+TARGET_LINK_LIBRARIES(cubicspline qmc qmcbase qmcutil)
+
+ADD_EXECUTABLE(cubicspline1 cubicspline1.cpp)
+TARGET_LINK_LIBRARIES(cubicspline1 qmc qmcbase qmcutil)
 
 ADD_EXECUTABLE(bspline bspline.cpp)
 TARGET_LINK_LIBRARIES(bspline qmc qmcbase)
 
-INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
-INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIR})
-ADD_EXECUTABLE(bspline_blitz bspline_blitz.cpp)
-TARGET_LINK_LIBRARIES(bspline_blitz qmc qmcbase)
+#INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
+#INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIR})
+#ADD_EXECUTABLE(bspline_blitz bspline_blitz.cpp)
+#TARGET_LINK_LIBRARIES(bspline_blitz qmc qmcbase)
 
 #ADD_EXECUTABLE(reduce_test reduce_performance_test.cpp)
 #TARGET_LINK_LIBRARIES(reduce_test boost)
