Move inline function to cpp.
git-svn-id: http://qmcpack.googlecode.com/svn@1739 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -9,6 +9,8 @@ SET(HAMSRCS
   NonLocalECPotential.cpp
   ECPotentialBuilder.cpp
   ECPComponentBuilder.cpp
+  ECPComponentBuilder.1.cpp
+  ECPComponentBuilder.2.cpp
   NonLocalTOperator.cpp
 )
 
