Changes due to VMC+optimization combo.
git-svn-id: http://qmcpack.googlecode.com/svn@1775 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(QMCDRIVERS
   SimpleFixedNodeBranch.cpp
   QMCDriver.cpp
   QMCOptimize.cpp
+  QMCOptimizeSingle.cpp
   QMCCostFunction.cpp
   WaveFunctionTester.cpp
   ${DMCDRIVERS}
