Update after bug fixes for three-body Jastrow.
git-svn-id: http://qmcpack.googlecode.com/svn@1802 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -37,9 +37,10 @@ ENDIF(HAVE_MPI)
 SET(QMCDRIVERS 
   SimpleFixedNodeBranch.cpp
   QMCDriver.cpp
-  QMCOptimize.cpp
   QMCOptimizeSingle.cpp
   QMCCostFunction.cpp
+  QMCCostFunctionBase.cpp
+  QMCCostFunctionSingle.cpp
   WaveFunctionTester.cpp
   ${DMCDRIVERS}
 )
