Rename QMCCostFunction as QMCCostFunctionSingle to use a base class.
git-svn-id: http://qmcpack.googlecode.com/svn@1803 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -37,8 +37,7 @@ ENDIF(HAVE_MPI)
 SET(QMCDRIVERS 
   SimpleFixedNodeBranch.cpp
   QMCDriver.cpp
-  QMCOptimizeSingle.cpp
-  QMCCostFunction.cpp
+  QMCOptimize.cpp
   QMCCostFunctionBase.cpp
   QMCCostFunctionSingle.cpp
   WaveFunctionTester.cpp
