Add PolyConstraints.cpp to the list.
git-svn-id: http://qmcpack.googlecode.com/svn@1836 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(JASTROW_SRCS
   Jastrow/PadeConstraints.cpp
   Jastrow/RPAConstraints.cpp
   Jastrow/AnyConstraints.cpp
+  Jastrow/PolyConstraints.cpp
   Jastrow/CBSOBuilder.cpp
   Jastrow/JastrowBasisBuilder.cpp
   Jastrow/JastrowBuilder.cpp
