Rename parse.cpp as convert4qmc.cpp
git-svn-id: http://qmcpack.googlecode.com/svn@1854 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -17,7 +17,7 @@ SET(CASINO
   CasinoParser.cpp
   BParser.cpp
   BMakeFunc.cpp
-  parse.cpp
+  convert4qmc.cpp
 )
 
 LINK_LIBRARIES(${FORTRAN_LIBS} 
