Bug fixes with the bspline parser.
git-svn-id: http://qmcpack.googlecode.com/svn@1857 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -53,7 +53,11 @@ ENDIF(QMC_COMPLEX)
 ####################################
 # create libqmcwfs
 ####################################
-ADD_LIBRARY(qmcwfs ${WFBASE_SRCS} ${JASTROW_SRCS} ${FERMION_SRCS})
+IF(QMC_BUILD_STATIC)
+  ADD_LIBRARY(qmcwfs STATIC ${WFBASE_SRCS} ${JASTROW_SRCS} ${FERMION_SRCS})
+ELSE(QMC_BUILD_STATIC)
+  ADD_LIBRARY(qmcwfs SHARED ${WFBASE_SRCS} ${JASTROW_SRCS} ${FERMION_SRCS})
+ENDIF(QMC_BUILD_STATIC)
 
 ## THESE ARE NOT USED ANYMORE
 #  Jastrow/ThreeBodyGeminalBuilder.cpp
