Test codes for TricubicBspline functions of real and complex types.
git-svn-id: http://qmcpack.googlecode.com/svn@1859 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/SandBox/CMakeLists.txt
+++ b/trunk/src/SandBox/CMakeLists.txt
@@ -29,6 +29,12 @@ TARGET_LINK_LIBRARIES(cubicspline1 qmcbase qmcutil)
 ADD_EXECUTABLE(bspline bspline.cpp)
 TARGET_LINK_LIBRARIES(bspline qmc qmcbase)
 
+ADD_EXECUTABLE(tribsplineComplex tribsplineComplex.cpp)
+TARGET_LINK_LIBRARIES(tribsplineComplex qmc qmcbase)
+ADD_EXECUTABLE(tribsplineReal tribsplineReal.cpp)
+TARGET_LINK_LIBRARIES(tribsplineReal qmc qmcbase)
+
+
 #INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
 #INCLUDE_DIRECTORIES(${BLITZ_INCLUDE_DIR})
 #ADD_EXECUTABLE(bspline_blitz bspline_blitz.cpp)
