Bugfixes for the parser.
git-svn-id: http://qmcpack.googlecode.com/svn@1872 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -12,8 +12,8 @@ SET(HAMSRCS
   ECPComponentBuilder.1.cpp
   ECPComponentBuilder.2.cpp
   NonLocalTOperator.cpp
-  FSAtomPseudoPot.cpp
 )
+#  FSAtomPseudoPot.cpp
 
 IF(HAVE_LIBFFTW)
   SET(HAMSRCS ${HAMSRCS}
