Remove STATIC/SHARED.
git-svn-id: http://qmcpack.googlecode.com/svn@1878 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -22,8 +22,9 @@ IF(HAVE_LIBFFTW)
 )
 ENDIF(HAVE_LIBFFTW)
 
-IF(QMC_BUILD_STATIC)
-  ADD_LIBRARY(qmcham STATIC ${HAMSRCS})
-ELSE(QMC_BUILD_STATIC)
-  ADD_LIBRARY(qmcham SHARED ${HAMSRCS})
-ENDIF(QMC_BUILD_STATIC)
+ADD_LIBRARY(qmcham ${HAMSRCS})
+#IF(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcham STATIC ${HAMSRCS})
+#ELSE(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcham SHARED ${HAMSRCS})
+#ENDIF(QMC_BUILD_STATIC)
