Remove STATIC/SHARED.
git-svn-id: http://qmcpack.googlecode.com/svn@1880 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -29,6 +29,11 @@ SET(UTILITIES
 #ENDIF(HAVE_LIBGSL)
 
 ADD_LIBRARY(qmcutil ${UTILITIES})
+#IF(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcutil STATIC ${UTILITIES})
+#ELSE(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcutil SHARED ${UTILITIES})
+#ENDIF(QMC_BUILD_STATIC)
 
 ####################################
 # create liboompi
@@ -70,6 +75,11 @@ SET(PARTICLEIO
 )
 
 ADD_LIBRARY(qmcbase ${PARTICLE}  ${PARTICLEIO})
+#IF(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcbase STATIC ${PARTICLE}  ${PARTICLEIO})
+#ELSE(QMC_BUILD_STATIC)
+#  ADD_LIBRARY(qmcbase SHARED ${PARTICLE}  ${PARTICLEIO})
+#ENDIF(QMC_BUILD_STATIC)
 
 
 SUBDIRS(QMCWaveFunctions)
