Clean up with the changes in estimators.
git-svn-id: http://qmcpack.googlecode.com/svn@1899 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -20,7 +20,6 @@ SET(QMCDRIVERS
   VMC/VMCUpdatePbyP.cpp
   VMC/VMCUpdateAll.cpp
   VMC/VMCSingle.cpp
-  VMC/VMCSingleOMP.cpp
   VMC/VMCFactory.cpp
   DMC/DMCUpdateAll.cpp
   DMC/DMCUpdatePbyP.cpp
@@ -32,7 +31,10 @@ SET(QMCDRIVERS
 )
 
 IF(ENABLE_OPENMP) 
-  SET(QMCDRIVERS ${QMCDRIVERS} DMC/DMCOMP.cpp)
+  SET(QMCDRIVERS ${QMCDRIVERS} 
+      VMC/VMCSingleOMP.cpp
+      DMC/DMCOMP.cpp
+     )
 ENDIF(ENABLE_OPENMP) 
 
 IF(HAVE_MPI) 
