Add QMCConstFunctionOMP to handle OpenMP. QMCOptimize selects OMP-objects if the number of threads is more than one.
git-svn-id: http://qmcpack.googlecode.com/svn@1956 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -34,6 +34,7 @@ IF(ENABLE_OPENMP)
   SET(QMCDRIVERS ${QMCDRIVERS} 
       VMC/VMCSingleOMP.cpp
       DMC/DMCOMP.cpp
+      QMCCostFunctionOMP.cpp
      )
 ENDIF(ENABLE_OPENMP) 
 
