Cleanup RQMC drivers and estimator and other I/O functions.
git-svn-id: http://qmcpack.googlecode.com/svn@1997 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(QMCDRIVERS
   CorrelatedSampling/CSVMCUpdateAll.cpp
   CorrelatedSampling/CSVMCUpdatePbyP.cpp
   ../Estimators/CSEnergyEstimator.cpp
+  ../Estimators/CSPolymerEstimator.cpp
 )
 
 IF(ENABLE_OPENMP) 
